--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "typecheck": "tsc && tsc -p cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
-  "prettier": {},
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
+  },
   "eslintIgnore": [
     "/node_modules",
     "/build",
@@ -32,6 +36,7 @@
     "@remix-run/serve": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.6.13",
+    "luxon": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.3.1"
@@ -44,6 +49,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.44.2",
+    "@types/luxon": "^3.3.2",
     "@types/node": "^18.17.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
