--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,10 @@
-/node_modules
-*.log
-.DS_Store
-.env
-/.cache
-/public/build
+node_modules
+
 /build
+/public/build
+.env
+
+/cypress/screenshots
+/cypress/videos
+/prisma/data.db
+/prisma/data.db-journal
