--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@flydotio/dockerfile": "^0.4.10",
     "@remix-run/dev": "^2.0.0",
     "@remix-run/eslint-config": "^2.0.0",
     "@testing-library/cypress": "^9.0.0",
